Added Support for All Image Types

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1>IMGShare</h1>
     </div>
     <div id="items">
-        <input type="file" id="fileInput" accept=".png, .jpg">
+        <input type="file" id="fileInput" accept="image/*">
         <div id="div"></div>
         <div id="URLitem">
 
